@@ -2,6 +2,8 @@ Release notes
 -------------
 
 Date          Version   Comment
+2021/08/31    1.4.2     Update for Book Word import plugin compatibility.
+2021/07/14    1.4.1     Require latest version of Book Word import plugin.
 2020/07/05    1.4.0     Refactor code to use Book wordconverter class.
 2018/06/04    1.3.7     Support Privacy API for GDPR compliance.
 2017/11/12    1.3.6     Treat formatted lists as Bullet Lists, remove default line-height property.
